<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_accountSettings"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_accountsettings" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_spacer1"
            android:title=""
            android:enabled="false"/>
        <item
            android:id="@+id/nav_spacer2"
            android:title=""
            android:enabled="false"/>
        <item
            android:id="@+id/nav_spacer3"
            android:title=""
            android:enabled="false"/>
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logOut"/>
    </group>
</menu>