<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewRegisterIcon"
        android:layout_width="183dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/str_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <View
        android:id="@+id/view"
        android:layout_width="309dp"
        android:layout_height="407dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegisterIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_email_address"
        android:textColor="#090808"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/str_default"
        android:inputType="textEmailAddress"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailAddress" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_password"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName2" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/str_default"
        android:inputType="textPassword"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="149dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_remember_me"
        app:layout_constraintStart_toStartOf="@+id/textViewCofirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/str_already_registered"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_name"
        android:textColor="#090808"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/str_default"
        android:inputType="textPersonName"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewCofirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_confirm_password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="211dp"
        android:layout_height="33dp"
        android:autofillHints=""
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/str_default"
        android:inputType="textPassword"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewCofirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewCofirmPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_registar"
        app:backgroundTint="#2C4AD3"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:onClick="goToLogin"
        android:text="@string/str_login"
        app:backgroundTint="#2C4AD3"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNoAccount"
        app:layout_constraintStart_toEndOf="@+id/textViewNoAccount"
        app:layout_constraintTop_toTopOf="@+id/textViewNoAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>
