<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".ui.Requests.RequestsFragment">

    <TextView
        android:id="@+id/text_aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/request"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:rotation="180"
        android:text=">"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/input_location"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_aboutUs" />

    <Button
        android:id="@+id/button_maps"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="46dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:icon="@drawable/ic_baseline_map_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/input_location"
        app:layout_constraintTop_toBottomOf="@+id/text_aboutUs" />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="90dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="10"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_aboutUs" />

    <Button
        android:id="@+id/button_mic"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:icon="@drawable/ic_baseline_mic_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/input_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#2D73EB"
        android:text="@string/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_description" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="170dp"
        android:layout_height="21dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/no_images_uploaded"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_upload" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#2D73EB"
        android:text="@string/send"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_description"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/requestTitle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@+id/input_description"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
