<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".ui.Login_Register.LoginUser">

    <ImageView
        android:id="@+id/imageViewRegisterIcon"
        android:layout_width="197dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/str_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <View
        android:id="@+id/view"
        android:layout_width="302dp"
        android:layout_height="308dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegisterIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_email_address"
        android:textColor="#090808"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/str_default"
        android:inputType="textEmailAddress"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailAddress" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_password"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_radius"
        android:ems="10"
        android:hint="@string/str_default"
        android:inputType="textPassword"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <TextView
        android:id="@+id/recoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Recover my password"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Don't have an Account yet?"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/str_login"
        app:backgroundTint="#2C4AD3"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/recoverPassword" />

    <Button
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/str_registar"
        app:backgroundTint="#2C4AD3"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNoAccount"
        app:layout_constraintStart_toEndOf="@+id/textViewNoAccount"
        app:layout_constraintTop_toTopOf="@+id/textViewNoAccount"
        app:layout_constraintVertical_bias="0.375" />

</androidx.constraintlayout.widget.ConstraintLayout>