<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/background_color"
    tools:context=".ChangeUsernameFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:layout_marginTop="250dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:gravity="end"
                android:text="@string/old_password"
                android:textSize="20dp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/oldPassword"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:gravity="end"
                android:text="@string/new_password"
                android:textSize="20dp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/newPassword"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"/>

        </TableRow>




        <TableRow android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_cancel_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#FF0000"
                android:textAllCaps="false"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>


            <Button
                android:id="@+id/save_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="20dp"
                android:backgroundTint="#2D73EB"
                android:textAllCaps="false"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>